--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -11,7 +11,7 @@
 
 .sub-articles {
   margin-top: 50px;
-  width: 60%; 
+  width: 70%; 
   max-width: 600px; 
 }
 
@@ -28,9 +28,9 @@
 .check {
   display: flex;
   align-items: center;
-
-  
+  width: 200px;
 }
+
 .indispensable {
   color: red;
 }
