--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,92 +1,94 @@
 <%= render "shared/header" %>
-<%= render 'shared/error_messages', model: @article %>
-<div class="main-articles">
-  <%= form_with(model: @article, local: true) do |f| %>
-    <div class="sub-articles">
-      <div class="img-upload">
+<div data-turbo="false">
+  <%= render 'shared/error_messages', model: @article %>
+  <div class="main-articles">
+    <%= form_with(model: @article, local: true) do |f| %>
+      <div class="sub-articles">
         <div class="img-upload">
-          <div class="weight-bold-text">
-            商品画像(3枚まで)
-          <span class="indispensable">必須</span>
-        </div>
-        <div class="click-upload">
-          <p>
-            クリックしてファイルをアップロード
-          </p>
-            <%= f.file_field :images, name: 'article[images][]', data: {index: 0} %>
-            <%= f.file_field :images, name: 'article[images][]', data: {index: 1} %>
-            <%= f.file_field :images, name: 'article[images][]', data: {index: 2} %>
-        </div>
-      </div>
-      <div class="field">
-        <div class="label-container">
-          <%= f.label :都道府県 %>
-          <span class="indispensable">必須</span>
-        </div>
-          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, prompt: "Select a prefecture" %>
-      </div>
-      <div class="field">
-        <div class="label-container">
-          <%= f.label :タイトル %>
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.text_field :title %>
-      </div>
-      <div class="check">
-        <div class="field">
-          <div class="label-container">
-            <%= f.label :チェックイン, class: "wide-label" %>
+          <div class="img-upload">
+            <div class="weight-bold-text">
+              商品画像(3枚まで)
             <span class="indispensable">必須</span>
           </div>
-          <%= f.date_field :check_in %>
+          <div class="click-upload">
+            <p>
+              クリックしてファイルをアップロード
+            </p>
+              <%= f.file_field :images, name: 'article[images][]', data: {index: 0} %>
+              <%= f.file_field :images, name: 'article[images][]', data: {index: 1} %>
+              <%= f.file_field :images, name: 'article[images][]', data: {index: 2} %>
+          </div>
         </div>
         <div class="field">
           <div class="label-container">
-            <%= f.label :チェックアウト, class: "wide-label" %>
+            <%= f.label :都道府県 %>
             <span class="indispensable">必須</span>
           </div>
-          <%= f.date_field :check_out %>
+            <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, prompt: "Select a prefecture" %>
         </div>
-      </div>
-      <div class="field">
-        <div class="label-container">
-          <%= f.label :パートナー %>
+        <div class="field">
+          <div class="label-container">
+            <%= f.label :タイトル %>
+            <span class="indispensable">必須</span>
+          </div>
+          <%= f.text_field :title %>
+        </div>
+        <div class="check">
+          <div class="field">
+            <div class="label-container">
+              <%= f.label :チェックイン, class: "wide-label" %>
+              <span class="indispensable">必須</span>
+            </div>
+            <%= f.date_field :check_in %>
+          </div>
+          <div class="field">
+            <div class="label-container">
+              <%= f.label :チェックアウト, class: "wide-label" %>
+              <span class="indispensable">必須</span>
+            </div>
+            <%= f.date_field :check_out %>
+          </div>
+        </div>
+        <div class="field">
+          <div class="label-container">
+            <%= f.label :パートナー %>
+            <span class="indispensable">必須</span>
+          </div>
+          <%= f.collection_select(:partner_id, Partner.all, :id, :name, {}, {class:"select-box"})%>
+        </div>
+        <div class="field">
+          <div class="label-container">
+            <%= f.label :宿泊先 %>
+          </div>
+          <%= f.text_field :hotel %>
+        </div>
+        <div class="field">
+          <div class="label-container">
+            <%= f.label :料金 %>
+            <span class="indispensable">必須</span>
+          </div>
+          <%= f.number_field :price %>
+        </div>
+        <div class="field">
+          <div class="label-container">
+            <%= f.label :旅行サイト %>
+          </div>
+            <%= f.collection_select(:travel_site_id, TravelSite.all, :id, :name, {}, {class:"select-box"})%>
+        </div>
+        <div class="field">
+          <%= f.label :内容 %>
           <span class="indispensable">必須</span>
+          <%= f.text_area :content, class: "wide-text-area" %>
         </div>
-        <%= f.collection_select(:partner_id, Partner.all, :id, :name, {}, {class:"select-box"})%>
-      </div>
-      <div class="field">
-        <div class="label-container">
-          <%= f.label :宿泊先 %>
-        </div>
-        <%= f.text_field :hotel %>
-      </div>
-      <div class="field">
-        <div class="label-container">
-          <%= f.label :料金 %>
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.number_field :price %>
-      </div>
-      <div class="field">
-        <div class="label-container">
-          <%= f.label :旅行サイト %>
-        </div>
-          <%= f.collection_select(:travel_site_id, TravelSite.all, :id, :name, {}, {class:"select-box"})%>
-      </div>
-      <div class="field">
-        <%= f.label :内容 %>
-        <span class="indispensable">必須</span>
-        <%= f.text_area :content, class: "wide-text-area" %>
-      </div>
 
-      <div class="actions">
-        <%= f.submit "編集する", class: "new-btn" %>
+        <div class="actions">
+          <%= f.submit "編集する", class: "new-btn" %>
+        </div>
+        <div class="actions">
+          <%= link_to '戻る', edit_user_path(current_user), class: "back-article-btn" %>
+        </div>
       </div>
-      <div class="actions">
-        <%= link_to '戻る', edit_user_path(current_user), class: "back-article-btn" %>
-      </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
 <%= render "shared/footer" %>
