--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,56 +1,58 @@
 <%= render "shared/header" %>
-<div class='account-page' id='account-page'>
-  <div class='account-page__inner clearfix'>
-    <div class='account-page__inner--left account-page__header'>
-      <h2>Create Account</h2>
-      <h5>新規アカウントの作成</h5>
-    </div>
-    <div class='account-page__inner--right user-form'>
-      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
-      <%= render 'shared/error_messages', model: resource %> 
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :nickname%>
+<div data-turbo="false">
+  <div class='account-page' id='account-page'>
+    <div class='account-page__inner clearfix'>
+      <div class='account-page__inner--left account-page__header'>
+        <h2>Create Account</h2>
+        <h5>新規アカウントの作成</h5>
+      </div>
+      <div class='account-page__inner--right user-form'>
+        <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
+        <%= render 'shared/error_messages', model: resource %> 
+          <div class='field'>
+            <div class='field-label'>
+              <%= f.label :nickname%>
+            </div>
+            <div class='field-input'>
+              <%= f.text_field :nickname, autofocus: true%>
+            </div>
           </div>
-          <div class='field-input'>
-            <%= f.text_field :nickname, autofocus: true%>
+          <div class='field'>
+            <div class='field-label'>
+              <%= f.label :email%>
+            </div>
+            <div class='field-input'>
+              <%= f.email_field :email%>
+            </div>
           </div>
-        </div>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :email%>
-          </div>
-          <div class='field-input'>
-            <%= f.email_field :email%>
-          </div>
-        </div>
 
-      <%if @sns_id.present? %>
-        <%= hidden_field_tag :sns_auth, true %>
-      <% else %>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :password%>
-            <i>(英数字6文字以上)</i>
+        <%if @sns_id.present? %>
+          <%= hidden_field_tag :sns_auth, true %>
+        <% else %>
+          <div class='field'>
+            <div class='field-label'>
+              <%= f.label :password%>
+              <i>(英数字6文字以上)</i>
+            </div>
+            <div class='field-input'>
+              <%= f.password_field :password, autocomplete: "new-password" %>
+            </div>
           </div>
-          <div class='field-input'>
-            <%= f.password_field :password, autocomplete: "new-password" %>
+          <div class='field'>
+            <div class='field-label'>
+              <%= f.label :password_confirmation%>
+            </div>
+            <div class='field-input'>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+            </div>
           </div>
-        </div>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :password_confirmation%>
-          </div>
-          <div class='field-input'>
-            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <% end %>
+          <div class='actions'>
+            <%= f.submit "Create Account", class: 'btn btn-primary' %>
           </div>
         </div>
       <% end %>
-        <div class='actions'>
-          <%= f.submit "Create Account", class: 'btn btn-primary' %>
-        </div>
-      </div>
-    <% end %>
+    </div>
   </div>
 </div>
 <%= render "shared/footer" %>
