--- a/app/assets/stylesheets/prefecture/prefecture.css
+++ b/app/assets/stylesheets/prefecture/prefecture.css
@@ -111,6 +111,13 @@
   left: 50px;
 }
 
+.edit-article-list {
+  font-size: 30px;
+  font-weight: 900;
+  padding-left: 50px;
+  margin-top: 100px;
+}
+
 .show-container {
   position: relative;
   max-width: 100%;
