--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -124,7 +124,7 @@
       <% end %>
     </ul>
   <% else %>
-    <p>[ 投稿した記事はありません]</p>
+    <p class="edit-article-list">[ 投稿した記事はありません]</p>
   <% end %>
   <div class="new-btns">
     <%= link_to '戻る', root_path, class: "back-article-btn" %>
