--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -59,7 +59,7 @@ header.header .user_nav .user__info {
   border: 1px solid #d8d8d8;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
   background-color: #fff;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 header.header .user_nav span:after {
@@ -80,7 +80,7 @@ header.header .user_nav:hover .user__info {
 
 header.header .user_nav .user__info li a {
   display: block;
-  padding: 10px 0;
+  padding: 10px 10px;
   text-align: left;
   text-decoration: none;
   color: black;
