戻るボタンのビューの修正

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -88,7 +88,7 @@
           <%= f.submit "投稿する", class: "new-article-btn" %>
         </div>
         <div class="actions">
-          <%= link_to '戻る', root_path, class: "back-btn" %>
+          <%= link_to '戻る', root_path, class: "back-article-btn" %>
         </div>
       </div>
     <% end %>
